creating signin, signup page and adding supersuser

--- a/meal_mate/delivery/templates/index.html
+++ b/meal_mate/delivery/templates/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Welcome page</title>
 </head>
 <body>
-    <p>This is working</p>
+    <h2>Welcome to Meal-Mate</h2>
+    <a href="open_signin/">SIGN IN</a>
+    <br>
+    <a href="open_signup/">SIGN UP</a>
 </body>
 </html>
