--- a/meal_mate/delivery/templates/signin.html
+++ b/meal_mate/delivery/templates/signin.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <title>Sign In</title>
 </head>
 <body>
-    <h3>Sign in below:</h3>
-    <form>
-        <label>Username </label>
-        <input type="text" name="username">
+    <h3>Sign In:</h3>
+    <form method="POST" action="{% url 'signin' %}">
+        {% csrf_token %}
+        <label>Username:</label>
+        <input type="text" name="username" required>
         <br><br>
-        <label>Password </label>
-        <input type="password" name="password">
+        <label>Password:</label>
+        <input type="password" name="password" required>
         <br><br>
-        <button type="submit">SIGN IN</button>
+        <button type="submit">Sign In</button>
     </form>
 </body>
 </html>
