--- a/meal_mate/delivery/templates/signup.html
+++ b/meal_mate/delivery/templates/signup.html
@@ -6,9 +6,8 @@
 </head>
 <body>
     <h3>Sign in below:</h3>
-
-    
-    <form>
+    <form method="POST" action="{% url 'signup' %}">
+        {% csrf_token %}
         <label>Username</label>
         <input type="text" name="username" required>
         <br><br>
