creating our own admin panel

--- a/meal_mate/delivery/templates/admin_home.html
+++ b/meal_mate/delivery/templates/admin_home.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Success</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Welcome, {{ customer.username }}!</h1>
-    <p>You have successfully signed in.</p>
+    <h1>Welcome Admin!</h1>
+    <a href="#">add restaurents</a>
+    <br>
+    <br>
+    <a href="#">show restaurents</a>
 </body>
 </html>
