creating restaurant models and pages

--- a/meal_mate/delivery/templates/admin_home.html
+++ b/meal_mate/delivery/templates/admin_home.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Welcome Admin!</h1>
-    <a href="#">add restaurents</a>
+    <a href="add_restaurant_page">add restaurants</a>
     <br>
     <br>
-    <a href="#">show restaurents</a>
+    <a href="#">show restaurants</a>
 </body>
 </html>
