--- a/meal_mate/delivery/templates/customer_home.html
+++ b/meal_mate/delivery/templates/customer_home.html
@@ -6,6 +6,6 @@
     <title>Customer</title>
 </head>
 <body>
-    <h1>Welcome customer</h1>
+    <h1>Welcome {{ customer.username }}!</h1>
 </body>
 </html>
