adding and displaying restaurants

--- a/meal_mate/delivery/templates/admin_home.html
+++ b/meal_mate/delivery/templates/admin_home.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>Welcome Admin!</h1>
-    <a href="add_restaurant_page">add restaurants</a>
+    <a href="open_add_restaurant">add restaurants</a>
     <br>
     <br>
-    <a href="#">show restaurants</a>
+    <a href="open_show_restaurant">show restaurants</a>
 </body>
 </html>
