--- a/meal_mate/delivery/templates/add_restaurant.html
+++ b/meal_mate/delivery/templates/add_restaurant.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Add Restaurents</h1>
 
-    <form method="post" action="{%url 'add_restaurants'%}">
+    <form method="post" action="{% url 'add_restaurant' %}">
         {% csrf_token %}
         <label for="name">Restaurents Name:</label>
         <input type="text" id="name" name="name" required><br><br>
@@ -22,7 +22,7 @@
         <label for="rating">Ratings:</label>
         <input type="number" id="rating" name="rating" step="0.1" min="0" max="5" required><br><br>
 
-        <button type="submit">Submit</button>
+        <button type="submit">ADD</button>
         <button type="reset">Reset</button>
     </form>
 </body>
