--- a/meal_mate/delivery/templates/admin_home.html
+++ b/meal_mate/delivery/templates/admin_home.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>admin page</title>
 </head>
 <body>
-    <h1>Welcome Admin!</h1>
-    <a href="open_add_restaurant">add restaurants</a>
+    <h1>Welcome ADMIN!</h1>
+    <a href="open_add_restaurant">Add new Restaurant</a>
     <br>
     <br>
-    <a href="open_show_restaurant">show restaurants</a>
+    <a href="open_show_restaurant">Show Restaurants</a>
 </body>
 </html>
