--- a/meal_mate/delivery/templates/signin.html
+++ b/meal_mate/delivery/templates/signin.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
     <title>Sign In</title>
 </head>
 <body>
-    <h3>Sign In:</h3>
-    <form method="POST" action="{% url 'signin' %}">
+    <h3>Sign in below:</h3>
+    <form method="post" action="{% url 'signin' %}">
         {% csrf_token %}
-        <label>Username:</label>
-        <input type="text" name="username" required>
+        <label>Username </label>
+        <input type="text" name="username">
         <br><br>
-        <label>Password:</label>
-        <input type="password" name="password" required>
+        <label>Password </label>
+        <input type="password" name="password">
         <br><br>
-        <button type="submit">Sign In</button>
+        <button type="submit">SIGN IN</button>
     </form>
 </body>
 </html>
