--- a/meal_mate/delivery/templates/index.html
+++ b/meal_mate/delivery/templates/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>Welcome page</title>
 </head>
 <body>
     <h2>Welcome to Meal-Mate</h2>
-    <a href="open_signin/">SIGN IN</a>
-    <br>
-    <a href="open_signup/">SIGN UP</a>
+    <a href="signin/">SIGN IN</a>
+    <a href="signup/">SIGN UP</a>
 </body>
 </html>
