--- a/meal_mate/delivery/templates/show_restaurants.html
+++ b/meal_mate/delivery/templates/show_restaurants.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>restaurants List</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <title>My Favorite Restaurants</title>
 </head>
 <body>
-    <!-- {{restaurants}} -->
-     <h1>My Favorite Restaurants</h1>
+    <h1>My Favorite Restaurants</h1>
+    <a href="{% url 'add_restaurant_page' %}">Add a Restaurant</a>
     <table border="1">
         <thead>
             <tr>
@@ -28,16 +30,14 @@
                 <td>{{ restaurant.cuisine }}</td>
                 <td>{{ restaurant.rating }}/5</td>
                 <td>
-                    <a href="{% url 'open_update_restaurant' restaurant.id %}">Upadate Restaurant</a>
-                    <br>
+                    <a href="{% url 'restaurant_menu' restaurant.id %}">View Menu</a>
+                    <hr>
+                    <a href="{% url 'update_restaurant_page' restaurant.id %}">Update Info</a>
+                    <hr>
                     <form method="POST" action="{% url 'delete_restaurant' restaurant.id %}">
-                    {% csrf_token %}
-                        <button type="submit">Delete Restaurant</button>
+                        {% csrf_token %}
+                        <button type="submit" onclick="return confirm('Are you sure you want to delete this restaurant?')">Delete</button>
                     </form>
-                    <!-- <a href="{% url 'delete_restaurant' restaurant.id %}">delete Restaurant</a> -->
-                    <br>
-                    <a href="{% url 'open_update_menu' restaurant.id %}">Upadate Menu</a>
-                    <br>
                 </td>
             </tr>
             {% endfor %}
