--- a/meal_mate/delivery/templates/add_restaurant.html
+++ b/meal_mate/delivery/templates/add_restaurant.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>Document</title>
 </head>
 <body>
-    <h1>Add Restaurents</h1>
-
-    <form method="post" action="{% url 'add_restaurant' %}">
+    <form method="POST" action="{% url 'add_restaurant' %}">
         {% csrf_token %}
-        <label for="name">Restaurents Name:</label>
+        <label for="name">Restaurant Name:</label>
         <input type="text" id="name" name="name" required><br><br>
-
-        <label for="picture">Picture Url:</label>
+    
+        <label for="picture">Picture URL:</label>
         <input type="url" id="picture" name="picture"><br><br>
-
+    
         <label for="cuisine">Cuisine:</label>
-        <input type="text" id="cuisine" name="cuisine"><br><br>
-
-        <label for="rating">Ratings:</label>
+        <input type="text" id="cuisine" name="cuisine" required><br><br>
+    
+        <label for="rating">Rating:</label>
         <input type="number" id="rating" name="rating" step="0.1" min="0" max="5" required><br><br>
-
-        <button type="submit">ADD</button>
-        <button type="reset">Reset</button>
+    
+        <button type="submit">Add Restaurant</button>
     </form>
+    
 </body>
 </html>
