--- a/meal_mate/delivery/templates/customer_home.html
+++ b/meal_mate/delivery/templates/customer_home.html
@@ -3,54 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer page</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <title>My Favorite Restaurants</title>
 </head>
 <body>
-<h1>Welcome Customer</h1>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Picture</th>
-                <th>Name</th>
-                <th>Cuisine</th>
-                <th>Rating</th>
-                <th>Other Operations</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for restaurant in restaurants %}
-            <tr>
-                <td>
-                    <img src="{{ restaurant.picture }}" alt="Picture of {{ restaurant.name }}" width="100">
-                </td>
-                <td>{{ restaurant.name }}</td>
-                <td>{{ restaurant.cuisine }}</td>
-                <td>{{ restaurant.rating }}/5</td>
-                <td>
-                    <a href="{% url 'view_menu' restaurant.id %}">View Menu</a>
-                    <br>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-
-</body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <body>
-    <h1>Customer Home page</h1>
+    Welcome {{username}}
     <h1>My Favorite Restaurants</h1>
     <table border="1">
         <thead>
@@ -59,7 +17,7 @@
                 <th>Name</th>
                 <th>Cuisine</th>
                 <th>Rating</th>
-                <th>Other Operations</th>
+                <th>Explore</th>
             </tr>
         </thead>
         <tbody>
@@ -72,11 +30,13 @@
                 <td>{{ restaurant.cuisine }}</td>
                 <td>{{ restaurant.rating }}/5</td>
                 <td>
-                    <a href="{% url 'view_menu' restaurant.id %}">View Menu </a>
+                    <a href="{% url 'customer_menu' restaurant.id username %}">View Menu</a>
+                    <hr>
+                   
                 </td>
             </tr>
             {% endfor %}
         </tbody>
-    </table> -->
+    </table>
 </body>
 </html>
