--- a/meal_mate/delivery/templates/menu.html
+++ b/meal_mate/delivery/templates/menu.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>{{ restaurant.name }} - Menu</title>
 </head>
-<body>   
-    <h2>Welcome {{username}}</h2>
-
-    <a href="{% url 'show_cart_page' username %}">View cart</a>
-
+<body>
     <h1>Menu for {{ restaurant.name }}</h1>
     <h3>Cuisine: {{ restaurant.cuisine }}</h3>
     <img src="{{ restaurant.picture }}" alt="{{ restaurant.name }}" width="200">
@@ -44,9 +40,11 @@
                     {% endif %}
                 </td> 
                 <td>
-                    <form method="POST" action="{% url 'add_to_cart' item.id username %}">
+                    <a href="{% url 'update_menuItem_page' item.id %}">Update Item</a>
+                    <hr>
+                    <form method="POST" action="{% url 'delete_menuItem' item.id %}">
                         {% csrf_token %}
-                        <button type="submit" onclick="return confirm('Are you sure you want to add to cart?')">Add to cart</button>
+                        <button type="submit" onclick="return confirm('Are you sure you want to delete this item?')">Delete Item</button>
                     </form>
                 </td>
             </tr>
@@ -58,6 +56,25 @@
         </tbody>
     </table>
 
-    
+    <h2>Add Menu Item</h2>
+    <form method="POST" action="{% url 'restaurant_menu' restaurant.id %}">
+        {% csrf_token %}
+        <label for="name">Item Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
+
+        <label for="description">Description:</label>
+        <textarea id="description" name="description" required></textarea><br><br>
+
+        <label for="price">Price:</label>
+        <input type="number" id="price" name="price" step="0.01" required><br><br>
+
+        <label for="is_veg">Vegetarian:</label>
+        <input type="checkbox" id="is_veg" name="is_veg"><br><br>
+
+        <label for="picture">Image URL:</label>
+        <input type="url" id="picture" name="picture"><br><br>
+
+        <button type="submit">Add Item</button>
+    </form>
 </body>
 </html>
